# misc

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/frc/: impact_ages.py  tba_api_utils.py  tba_cache.json  teams_counter.py
scripts/frc/Rebuilt total fuel/: fetch.py  get_tba_2026_json_schema.py  graph.py  interactive_graph.py  six_rp_matches.py
scripts/frc/red_wins_more/: analysis_result.txt  red_wins_more.py
scripts/frc/teams_counter/: team.py  teams_counter.py
scripts/investements/: calculate_earnings.py
