[project]
name = "misc"
version = "0.1.0"
description = "Stuff that should be version managed but don't deserver their own repository."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click==8.1.3",
    "httpx>=0.28.1",
    "requests==2.27.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
extend-exclude = [
]

[tool.ruff.lint]
extend-select = [
    "I", # isort (import sorting)
    "UP", # pyupgrade (modernize syntax)
    "B", # flake8-bugbear (catch common bugs)
    "SIM", # flake8-simplify (simplify code logic)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"*.ipynb" = ["E402"]
